included required changes - responsivness - semantic tags like <header> - consistent indentiation - typography like <b> - improved directory structure - removed <style> attr from html files

--- a/css/blog-post.css
+++ b/css/blog-post.css
@@ -6,11 +6,16 @@
 @import url(../css/blog-post/button.css);
 @import url(../css/common/highlight.css);
 
+body {
+  font-family: Raleway;
+  font-size: 15px;
+}
+
 .container{
   color: grey;
   display:grid;
-  grid-template-columns: 850px;
-  grid-template-rows: 250px auto 1fr;  
+  grid-template-columns: 100%;
+  grid-template-rows: auto auto 1fr;  
   grid-template-areas:
   "hd"
   "main"
@@ -22,12 +27,11 @@
   background:#ebebe8;
 }
 
-
 /* if screen is wide enough */
-@media(min-width:900px) {
+@media(min-width:901px) {
   .container{
     display:grid;
-    grid-template-columns: 850px;
+    grid-template-columns: 300px 300px;
     grid-template-rows: 250px auto 1fr;  
     grid-template-areas:
     "hd hd hd hd hd hd hd hd"
