--- a/css/blog-website.css
+++ b/css/blog-website.css
@@ -5,11 +5,16 @@
 @import url(../css/blog-website/blogboxes.css);
 @import url(../css/blog-website/grid.css);
 
+body {
+  font-family: Raleway;
+  font-size: 15px;
+}
+
 .container{
   color: grey;
   display:grid;
-  grid-template-columns: 850px;
-  grid-template-rows: 200px 1fr 1fr;  
+  grid-template-columns: 600px;
+  grid-template-rows: 200px repeat(2, 1fr);  
   grid-template-areas:
   "hd"
   "sd"
@@ -22,22 +27,29 @@
   background:#ebebe8;
 }
 
+/* mid screen size */
+@media(min-width:601px) and (max-width:1000px){
+  .container{
+    grid-template-columns: auto;
+    grid-template-rows: 200px repeat(2, 1fr);  
+  }
+}
 /* if screen is wide enough */
-@media(min-width:900px) and (max-width:1100px){
+@media(min-width:1001px) and (max-width:1100px){
   .container{
     display:grid;
-    grid-template-columns: 300px 300px 300px;
+    grid-template-columns: 300px 300px;
     grid-template-rows: 200px auto 1fr;
     grid-template-areas:
     "hd hd hd hd hd hd hd hd"
-    "sd sd main main main main main main"
+    "sd sd sd main main main main main"
     "ft ft ft ft ft ft ft ft";
   }
 }
 /* Large screen*/
 @media(min-width:1101px){
   .container{
-    grid-template-columns: 300px 300px 300px;
+    grid-template-columns: 300px 300px;
     grid-template-rows: 200px auto 1fr;
     grid-template-areas:
     "hd hd hd hd hd hd hd hd"
