--- a/css/blog-website.css
+++ b/css/blog-website.css
@@ -14,7 +14,7 @@ body {
   color: grey;
   display:grid;
   grid-template-columns: 600px;
-  grid-template-rows: 200px repeat(2, 1fr);  
+  grid-template-rows: auto repeat(2, 1fr);  
   grid-template-areas:
   "hd"
   "sd"
@@ -31,7 +31,7 @@ body {
 @media(min-width:601px) and (max-width:1000px){
   .container{
     grid-template-columns: auto;
-    grid-template-rows: 200px repeat(2, 1fr);  
+    grid-template-rows: auto repeat(2, 1fr);  
   }
 }
 /* if screen is wide enough */
@@ -39,7 +39,7 @@ body {
   .container{
     display:grid;
     grid-template-columns: 300px 300px;
-    grid-template-rows: 200px auto 1fr;
+    grid-template-rows: auto auto 1fr;
     grid-template-areas:
     "hd hd hd hd hd hd hd hd"
     "sd sd sd main main main main main"
@@ -50,7 +50,7 @@ body {
 @media(min-width:1101px){
   .container{
     grid-template-columns: 300px 300px;
-    grid-template-rows: 200px auto 1fr;
+    grid-template-rows: auto auto 1fr;
     grid-template-areas:
     "hd hd hd hd hd hd hd hd"
     "sd sd sd sd main main main main"
